@@ -80,6 +80,26 @@ def with_context_manager():
         sct.shot()
 
 
+def regression_issue_128():
+    """Regression test for issue #128: areas overlap."""
+    area1 = {"top": 50, "left": 7, "width": 400, "height": 320, "mon": 1}
+    area2 = {"top": 200, "left": 200, "width": 320, "height": 320, "mon": 1}
+    with mss() as sct:
+        sct.grab(area1)
+        sct.grab(area2)
+
+
+def regression_issue_135():
+    """Regression test for issue #135: multiple areas."""
+    bounding_box_notes = {"top": 0, "left": 0, "width": 100, "height": 100}
+    bounding_box_score = {"top": 110, "left": 110, "width": 100, "height": 100}
+    bounding_box_test = {"top": 220, "left": 220, "width": 100, "height": 100}
+    with mss() as sct:
+        sct.grab(bounding_box_notes)
+        sct.grab(bounding_box_test)
+        sct.grab(bounding_box_score)
+
+
 @pytest.mark.skipif(OS == "darwin", reason="No possible leak on macOS.")
 @pytest.mark.parametrize(
     "func",
@@ -88,6 +108,8 @@ def with_context_manager():
         bound_instance_without_cm_but_use_close,
         unbound_instance_without_cm,
         with_context_manager,
+        regression_issue_128,
+        regression_issue_135,
     ),
 )
 def test_resource_leaks(func, monitor_func):
